--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.18",
+    "@tanstack/react-query-devtools": "^5.51.18",
+    "add": "^2.0.6",
+    "axios": "^1.7.3",
     "lucide-react": "^0.406.0",
-    "next": "14.2.4",
+    "next": "14.2.5",
+    "pnpm": "^9.6.0",
     "react": "^18.3.1",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
